# AI_color_generator

./: README.md  pyproject.toml
src/: generate_color_code.py  main.py
